# Rust-Drawing

./: Cargo.toml
src/: context.rs  lib.rs  main.rs
src/geometry/: aabb.rs  mod.rs  polygon.rs  triangle.rs  util.rs
